--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ font-weight: 400;
 
 }
 .btn-primary{
+    /* border:0; */
     width: 180px;
 height: 64px;
 
@@ -89,4 +90,50 @@ font-weight: 700;
    /* padding: 50px 240px 45px 240px; */
    /* padding-left: 240px; */
    width: 100%;
+   text-align: center;
 }
+/* main styles */
+main{
+    margin: 85px 240px 220px 240px;
+
+}
+.feature-container{
+
+    display: flex;
+}
+.feature-img{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+
+}
+.quick-feature{
+ margin-left: 100px;
+ display: block;
+ margin-top: 200px;
+
+ 
+}
+#quick{
+    color:#727272;
+
+font-size:2.8rem;
+
+font-weight:500;
+
+}
+#ofOur{
+    color: #131313;
+
+font-size: 2.8rem;
+
+font-weight: 700;
+
+}
+#features{
+    color:#FF900E;
+    font-size:2.8rem;
+    font-weight: 700;
+
+}
+
