--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 .container-text{
     color: #727272;
+    
 
 
 font-size:1rem;
@@ -136,4 +137,120 @@ font-weight: 700;
     font-weight: 700;
 
 }
+/* Features you love and enjoy  */
+.love-enjoy{
+    display: flex;
+    margin-top: 200px;
+    gap: 200px;
+}
+.love-enjoy-text{
+    padding-left: 20px;
+    margin-bottom: 20px;
+    border-left: 5px solid orange;
+    color: #131313;
+  
+    font-size: 45px;
+    
+    font-weight: 700;
+   
+background-color:#FFF;
 
+}
+.love-box{
+    border-radius: 8px;
+background: #FFF;
+box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+color:  #131313;
+
+font-size:1.25rem;
+
+font-weight: 600;
+gap: 30px;
+padding: 30px;
+}
+.tenyears-btn{
+    width: 400px;
+
+
+border-radius: 10px;
+background: #FF900E;
+color: #FFF;
+text-align: center;
+
+font-size:3.5rem;
+
+font-weight: 700;
+padding:40px;
+position: relative;
+margin-top: -90px;
+margin-left:-120px;
+
+
+}
+.btn-10{
+    color: #FFF;
+
+font-size:2rem;
+
+font-weight: 500;
+
+}
+.facts-display{
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+    margin-top: 100px;
+    
+
+    
+
+
+}
+.facts-box{
+    width: 241.831px;
+    height: 241.831px;
+    text-align: center;
+    align-items: center;
+    padding-top:100px ;
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    margin-right: 50px;
+    
+}
+
+/* Sponsors section  */
+
+.sponsors-text{
+    color: #131313;
+    text-align: center;
+    padding: 200px;
+    padding-bottom: 30px;
+
+font-size: 3rem;
+
+font-weight: 700;
+
+}
+.center{
+    text-align: center;
+}
+.sponsors-img{
+    margin:50px ;
+    
+}
+/* footer  */
+.foot{
+    color: #424242;
+text-align: center;
+
+font-weight: 400;
+border-radius: 8px;
+background: #FFF4E7;
+
+padding: 40px 350px 40px 350px;
+
+}
+.foot-margin{
+    margin: 100px 200px 216px 220px;
+   
+}
